--- a/AGI/AGI/Views/Shared/_Layout.cshtml
+++ b/AGI/AGI/Views/Shared/_Layout.cshtml
@@ -6,30 +6,34 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
+        <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/bootstrap/css/bootstrap.css")" />
+        <script src="@Url.Content("~/Content/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         @Scripts.Render("~/bundles/modernizr")
         <link href="~/Scripts/jquery-ui.css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+            <div class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="Index.html" class="navbar-brand" style="font-size:20px"><img style="max-width:100px; margin-top: -10px;" src="http://www.adventiumglobalinc.com/wp-content/uploads/2012/11/Adventium-Logo1.png" height="50" /></a>
+                    </div>
+
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav" style="margin-top:10px;">
+                            <li><a href="@Url.Action("CreateTerm", "Home")">New Order</a></li>
+                            <li><a href="@Url.Action("ListOfTerms", "Home")">My Orders</a></li>
                         </ul>
-                    </nav>
-                </div>
-            </div>
-            <button id="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button"><span class="ui-button-text">A button element</span></button>
+                    </div>
+                    </div>
+                </div>    
         </header>
+
         <div id="body">
             @RenderSection("featured", required: false)
             <section class="content-wrapper main-content clear-fix">
@@ -39,7 +43,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
+                    <p>&copy; @DateTime.Now.Year - sample page</p>
                 </div>
             </div>
         </footer>
