--- a/AGIMaster/Views/Orders/Orders.cshtml
+++ b/AGIMaster/Views/Orders/Orders.cshtml
@@ -1,5 +1,34 @@
-﻿@{
+﻿@model IEnumerable<AGIMaster.Models.Order>
+@{
     ViewBag.Title = "Orders";
 }
-
-<h2>Orders</h2>
+<h2>Order</h2>
+<table><tbody><tr><td><span id="MO">@Html.ActionLink("Make an Order", "MakeOrder", "Orders") </span></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td><span id="VO">View Orders</span></td></tr></tbody></table>
+<table id="orders" hidden>
+    <thead>
+        <th>ID</th>
+        <th>Company</th>
+        <th>Pending</th>
+        <th>Date</th>
+    </thead>
+    <tbody>
+        @foreach (var order in Model.OrderBy(x => x.Id))
+        {
+            <tr>
+                <td>@order.Id</td>
+                <td>@order.Comapny</td>
+                <td>@order.Pending</td>
+                <td>
+                    @order.DateCreated
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+<script type="text/javascript">
+    $(document).on("ready", function () {
+        $("span#VO").on("click", function () {
+            $("table#orders").toggle("hidden");
+        });
+    });
+</script>
