Updated Layout and made the order tables look better

--- a/AGIMaster/Views/Orders/MakeOrder.cshtml
+++ b/AGIMaster/Views/Orders/MakeOrder.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewBag.Message</h2>
 
 <h3> This is where you can make an Order</h3>
-<table id="orders">
+<table id="orders" class="table">
     <thead>
         <tr>
             <th>ID</th>
