--- a/AGIMaster/Views/Orders/Orders.cshtml
+++ b/AGIMaster/Views/Orders/Orders.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>Order</h2>
 <table><tbody><tr><td><span id="MO">@Html.ActionLink("Make an Order", "MakeOrder", "Orders") </span></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td><span id="VO">View Orders</span></td></tr></tbody></table>
-<table id="orders" hidden>
+<table id="orders" class="table" hidden>
     <thead>
         <th>ID</th>
         <th>Company</th>
