--- a/AGIMaster/Views/Account/Login.cshtml
+++ b/AGIMaster/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
 }
 <body>
 
-    <div class="container">
+    <div class="container center-block">
 
         @using (Html.BeginForm())
         {
@@ -19,8 +19,8 @@
                 @Html.LabelFor(m => m.RememberMe)
                 @Html.CheckBoxFor(m => m.RememberMe)
 
-                <input type="submit" value="Log in" />
+                <button type="submit" class="alert-success">Login</button>
             </fieldset>
         }
-
+        </div>
 </body>
