--- a/AGIMaster/Views/Shared/_Layout.cshtml
+++ b/AGIMaster/Views/Shared/_Layout.cshtml
@@ -7,9 +7,13 @@
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="~/Content/Bootstrap/css/bootstrap.css">
         <link href="~/Content/Roller/jquery-ui.css" rel="stylesheet" />
+        <link rel="icon" href="~/Content/Roller/images/favicon2.png" type="image/x-icon">
+
+        
         @Scripts.Render("~/bundles/jquery")
         @*@Styles.Render("~/Content/css")*@
         @Scripts.Render("~/bundles/modernizr")
+        <script src="~/Content/Roller/jquery-ui.js"></script>
         <style type="text/css">
             body{
                 margin: 0;
