--- a/AGIMaster/Content/CustomCSS.css
+++ b/AGIMaster/Content/CustomCSS.css
@@ -4,8 +4,11 @@
    height:100%;
 }
 #footer {
-   position:absolute;
+  /* position:absolute;
    bottom:0;
    width:100%;
-   height:60px;   /* Height of the footer */
+   height:60px;*/
+  padding-top: 40px;
+padding-bottom: 40px;
+margin-top: 100px;   /* Height of the footer */
 }
