First Commit- Edited contact page

--- a/AGIMaster/Views/Home/Contact.cshtml
+++ b/AGIMaster/Views/Home/Contact.cshtml
@@ -44,7 +44,7 @@
         <h3>Address</h3>
     </header>
     <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        1600 Pennsylvania Avenue<br />
+        District of Columbia, USA 98052-6399
     </p>
 </section>
