--- a/AGIMaster/Views/Admin/Orders.cshtml
+++ b/AGIMaster/Views/Admin/Orders.cshtml
@@ -12,7 +12,7 @@
         <table id="orders" class="table">
             <thead>
                 <tr>
-                    <th>Select</th> 
+                    <th>Select</th>
                     <th>ID</th>
                     <th>Company</th>
                     <th>Pending</th>
@@ -23,7 +23,7 @@
                 @foreach (var order in Model.OrderBy(x => x.Id))
                 {
                     <tr id="@order.Id">
-                        <td><input type="checkbox" value="0" id="@order.Id"/></td>
+                        <td><input type="checkbox" value="0" id="@order.Id" /></td>
                         <td>@order.Id</td>
                         <td>@order.Comapny</td>
                         <td>@order.Pending</td>
@@ -37,137 +37,162 @@
         @Html.ActionLink("Make an Order", "MakeOrder", "Orders", null, new { @class = "btn btn-primary" })
         <button class="btn btn-primary" id="approve" disabled=true>Approve</button>
         <button class="btn btn-primary" id="deny" disabled=true>Deny</button>
-        @Html.ActionLink("Edit", "Edit", "Admin", null, new { @class = "btn btn-primary", @id = "edit", @disabled = true })</div>
-    <div class="col-md-4">
-        <div style="position:fixed">
-            <h3>Products in Order</h3>
-            <table id="products" class="table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th width="150">Product Name</th>
-                        <th width="80">Quantity</th>
-                    </tr>
-                </thead>
-                <tbody><tr id="EMPTY"><td>Click an order to see items</td><td>0</td></tr></tbody>
-            </table>
+        <button class="btn btn-primary" id="edit" disabled=true>Edit</button>
+       </div>
+        <div class="col-md-4">
+            <div style="position:fixed">
+                <h3>Products in Order</h3>
+                <table id="products" class="table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th width="150">Product Name</th>
+                            <th width="80">Quantity</th>
+                        </tr>
+                    </thead>
+                    <tbody><tr id="EMPTY"><td>Click an order to see items</td><td>0</td></tr></tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
-<script type="text/javascript">
-    var initFlag = false;
-    var checkArr=[];
-    $(document).on("ready", function () {
-        $("span#VO").on("click", function () {
-            $("table#orders").toggle("hidden");
-        });
-        $("#orders tbody tr").on("click", function () {
-            var id = $(this).attr("id");
-            $("#orders tbody tr").removeClass("alert-info");
-            $(this).toggleClass("alert-info");
-            $.ajax({
-                type: "POST",
-                url: "@Url.Action("ViewOrder", "Orders")",
-                dataType: "json",
-                data: {
-                    id:id
-                }
-            })
-            .done(function (data) {
-                var list = data;
-                // console.log(list);
-                Display(list);
-            })
-            .fail(function (xhr) {
-                console.log(xhr.responseText);
+    <script type="text/javascript">
+        var initFlag = false;
+        var checkArr = [];
+        $(document).on("ready", function () {
+            $("span#VO").on("click", function () {
+                $("table#orders").toggle("hidden");
             });
-        });
-        $("#orders tbody tr td input").on("change", function () {
-            var isChecked = $(this)[0].checked;
-            if (isChecked) {
-                checkArr.push($(this).attr("id"));
-            }
-            else {
-                var index = checkArr.indexOf($(this).attr("id"));
-                if (index > -1) {
-                    checkArr.splice(index, 1);
+            $("#orders tbody tr").on("click", function () {
+                var id = $(this).attr("id");
+                $("#orders tbody tr").removeClass("alert-info");
+                $(this).toggleClass("alert-info");
+                $.ajax({
+                    type: "POST",
+                    url: "@Url.Action("ViewOrder", "Orders")",
+                    dataType: "json",
+                    data: {
+                        id: id
+                    }
+                })
+                .done(function (data) {
+                    var list = data;
+                    // console.log(list);
+                    Display(list);
+                })
+                .fail(function (xhr) {
+                    console.log(xhr.responseText);
+                });
+            });
+            $("#orders tbody tr td input").on("change", function () {
+                var isChecked = $(this)[0].checked;
+                if (isChecked) {
+                    checkArr.push($(this).attr("id"));
                 }
-            }
-            if (checkArr.length <= 0) {
-                $("#approve").attr("disabled", true);
-                $("#deny").attr("disabled", true);
-                $("#edit").attr("disabled", true);
-            }
-            else if(checkArr.length > 1) {
-                $("#approve").attr("disabled", false);
-                $("#deny").attr("disabled", false);
-                $("#edit").attr("disabled", true);
-            }
-            else if(checkArr.length == 1 ){
-                $("#approve").attr("disabled", false);
-                $("#deny").attr("disabled", false);
-                $("#edit").attr("disabled", false);
-            }
-        });
-        $("#approve").on("click", function () {
-            var orders = Stringify();
-            $.ajax({
-                url: "@Url.Action("Approve", "Admin")",
+                else {
+                    var index = checkArr.indexOf($(this).attr("id"));
+                    if (index > -1) {
+                        checkArr.splice(index, 1);
+                    }
+                }
+                if (checkArr.length <= 0) {
+                    $("#approve").attr("disabled", true);
+                    $("#deny").attr("disabled", true);
+                    $("#edit").attr("disabled", true);
+                }
+                else if (checkArr.length > 1) {
+                    $("#approve").attr("disabled", false);
+                    $("#deny").attr("disabled", false);
+                    $("#edit").attr("disabled", true);
+                }
+                else if (checkArr.length == 1) {
+                    $("#approve").attr("disabled", false);
+                    $("#deny").attr("disabled", false);
+                    $("#edit").attr("disabled", false);
+                }
+            });
+            $("#approve").on("click", function () {
+                var orders = Stringify();
+                $.ajax({
+                    url: "@Url.Action("Approve", "Admin")",
+                    type: "POST",
+                    data: {
+                        orders: orders
+                    },
+                    success: function (data) {
+                        // alert("Submitted");
+                        window.location = "/Admin/Orders";
+                    },
+                    error: function (e) {
+                        alert("ERROR");
+                        console.log(e.error());
+                        // debugger;
+                    }
+                });
+            });
+            $("#deny").on("click", function () {
+                var orders = Stringify();
+                $.ajax({
+                    url: "@Url.Action("Deny", "Admin")",
+                    type: "POST",
+                    data: {
+                        orders: orders
+                    },
+                    success: function (data) {
+                        // alert("Submitted");
+                        window.location = "/Admin/Orders";
+                    },
+                    error: function (e) {
+                        alert("ERROR");
+                        console.log(e.error());
+                        // debugger;
+                    }
+                });
+            });
+            $("#edit").on("click", function () {
+                var order = checkArr[0];
+                console.log(orders);
+                window.location = "/Admin/Edit/?order=" + order;
+                @*$.ajax({
+                url: "@Url.Action("Edit", "Admin")",
                 type:"POST",
                 data: {
-                    orders: orders
+                    order: order
                 },
                 success: function(data) {
                     // alert("Submitted");
-                    window.location = "/Admin/Orders";
+                    //window.location = "/Admin/Edit";
+
+
                 },
                 error: function(e){
                     alert("ERROR");
                     console.log(e.error());
                     // debugger;
                 }
+            });*@
+
             });
         });
-        $("#deny").on("click", function () {
-            var orders = Stringify();
-            $.ajax({
-                url: "@Url.Action("Deny", "Admin")",
-                type:"POST",
-                data: {
-                    orders: orders
-                },
-                success: function(data) {
-                    // alert("Submitted");
-                    window.location = "/Admin/Orders";
-                },
-                error: function(e){
-                    alert("ERROR");
-                    console.log(e.error());
-                    // debugger;
+        function Stringify() {
+            var list = "";
+            for (i = 0; i < checkArr.length; i++) {
+                list += checkArr[i];
+                if (!((i + 1) >= checkArr.length)) {
+                    list += ",";
                 }
-            });
-        });
-    });
-    function Stringify() {
-        var list = "";
-        for (i = 0; i < checkArr.length; i++) {
-            list += checkArr[i];
-            if (!((i + 1) >= checkArr.length)) {
-                list += ",";
             }
+            return list;
         }
-        return list;
-    }
-    function Display(obj) {
-        var output = '';
-        $("#products tbody").empty();
-        if ($("#products tbody tr").attr("id") == "EMPTY") {
-            $(this).empty();
+        function Display(obj) {
+            var output = '';
+            $("#products tbody").empty();
+            if ($("#products tbody tr").attr("id") == "EMPTY") {
+                $(this).empty();
+            }
+            for (var product in obj) {
+                var newRow = "<tr><td>" + product + "</td><td>" + obj[product] + "</td></tr>";
+                $("table#products tbody").append(newRow);
+                // output += product + ': ' + obj[property] + '\n ';
+            }
+            // console.log(output);
         }
-        for (var product in obj) {
-            var newRow = "<tr><td>" + product + "</td><td>"+obj[product]+"</td></tr>";
-            $("table#products tbody").append(newRow);
-            // output += product + ': ' + obj[property] + '\n ';
-        }
-       // console.log(output);
-    }
-</script>
+    </script>
